desktop desgin complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                    
                 <div class="photo photo_2">
-                    <div class="para"><p>product owner</p></div>
+                    <div class="para"><p>Art director</p></div>
                             <img src="./image/photo2.png" alt="">
                             <h4>Saba Cabrera</h4>
 
@@ -38,7 +38,7 @@
 
 
                 <div class="photo">
-                    <div class="para"><p>product owner</p></div>
+                    <div class="para"><p>Tech Lead</p></div>
                             <img src="./image/photo3.png" alt="">
                             <h4>Shae Le</h4>
 
@@ -47,7 +47,7 @@
                 </div>                
             <div class="gallary_down">
                 <div class="photo">
-                    <div class="para"><p>product owner</p></div>
+                    <div class="para"><p>UX Designer</p></div>
                             <img src="./image/photo4.png" alt="">
                             <h4>Skylah Lu</h4>
 
@@ -55,14 +55,14 @@
                                  
 
                 <div class="photo photo_2">
-                    <div class="para"><p>product owner</p></div>
+                    <div class="para"><p>Developer</p></div>
                             <img src="./image/photo5.png" alt="">
                             <h4>Griff Richards</h4>
 
                     </div>              
 
                 <div class="photo">
-                    <div class="para"><p>product owner</p></div>
+                    <div class="para"><p>DEverloper</p></div>
                             <img src="./image/photo6.png" alt="">
                             <h4>Stan John</h4>
 
