--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
     </header>
     <main>
         <div class="gallary">
-                <div class="photo">
-                    <div class="para"><p>product owner</p></div>
+                <div class="photo photo_1">
+                    <p>product owner</p>
                     <div class="img">
                             <img src="./image/photo1.png" alt="">
                             <h4>Bill Mahoney</h4>
                     </div>                       
                 </div>                           
                 <div class="photo photo_2">
-                    <div class="para"><p>Art director</p></div>
+                    <p>Art director</p>
                             <img src="./image/photo2.png" alt="">
                             <h4>Saba Cabrera</h4>
 
                     </div>    
 
-                <div class="photo">
-                    <div class="para"><p>Tech Lead</p></div>
+                <div class="photo photo_3">
+                    <p>Tech Lead</p>
                             <img src="./image/photo3.png" alt="">
                             <h4>Shae Le</h4>
 
                     </div>                            
-                <div class="photo">
-                    <div class="para"><p>UX Designer</p></div>
+                <div class="photo photo_4">
+                    <p>UX Designer</p>
                             <img src="./image/photo4.png" alt="">
                             <h4>Skylah Lu</h4>
 
                     </div>                                  
 
-                <div class="photo photo_2">
-                    <div class="para"><p>Developer</p></div>
+                <div class="photo photo_5">
+                    <p>Developer</p>
                             <img src="./image/photo5.png" alt="">
                             <h4>Griff Richards</h4>
 
                     </div>              
 
-                <div class="photo">
-                    <div class="para"><p>DEverloper</p></div>
+                <div class="photo photo_6">
+                    <p>DEverloper</p>
                             <img src="./image/photo6.png" alt="">
                             <h4>Stan John</h4>
 
